# sdl-template

./: .clang-format  CMakeLists.txt  readme.md
include/: Game.hpp
include/Actors/: Actor.hpp
include/Components/: AnimSpriteComponent.hpp  BGSpriteComponent.hpp  CircleComponent.hpp  Component.hpp  InputComponent.hpp  MoveComponent.hpp  SpriteComponent.hpp  TileMapComponent.hpp
include/Helpers/: CSVParser.hpp  Math.hpp  Random.hpp
scripts/: build.sh
src/: Game.cpp  Main.cpp
src/Actors/: Actor.cpp
src/Components/: AnimSpriteComponent.cpp  BGSpriteComponent.cpp  CircleComponent.cpp  Component.cpp  InputComponent.cpp  MoveComponent.cpp  SpriteComponent.cpp  TileMapComponent.cpp
src/Helpers/: CSVParser.cpp  Math.cpp  Random.cpp
